overflow on body/html to avoid mobile issues with overflow

--- a/user/themes/cgre/scss/common/_base.scss
+++ b/user/themes/cgre/scss/common/_base.scss
@@ -6,12 +6,10 @@
 html {
   box-sizing: border-box;
 }
-// html,
-// body {
-//   overflow-x: hidden;
-// }
-
-body, .smooth-container { scroll-behavior: smooth }
+html,
+body {
+  overflow-x: hidden;
+}
 
 body {
   background: color(cream);
@@ -19,6 +17,8 @@ body {
   font-size: 16px;
   font: 18px/1.333 $font-sans-serif;
   text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
+
   @include media-md {
     margin-top: 122px;
   }
